# PrepMed

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/: database.py  main.py  models.py  schemas.py  seed.py
backend/src/services/: ai_service.py  ollama_service.py  tracking_service.py
frontend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
frontend/src/: main.py
frontend/src/static/css/: styles.css
frontend/src/static/js/: api.js  app.js  create.js  history.js  speech.js
frontend/src/templates/: base.html  create_template.html  create_user.html  detail.html  history.html  index.html  recording.html
frontend/src/templates/partials/: sidebar.html  topbar.html
