[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.2",
    "google-generativeai>=0.8.6",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
